# devx_cli

./: .gitignore  README.md  devx.sh  pyproject.toml  requirements.txt
devx/: cli.py
devx/core/: config.py  http.py  logging.py  utils.py
devx/services/coverage/: __init__.py  cli.py  runner.py
devx/services/depgraph/: __init__.py  analyzer.py  cli.py
devx/services/docgen/: __init__.py  cli.py  generator.py
devx/services/dockercheck/: __init__.py  analyzer.py  cli.py  runner.py
devx/services/health/: __init__.py  cli.py  scanner.py
devx/services/linkscan/: __init__.py  cli.py  crawler.py
devx/services/lint/: cli.py  git_utils.py  runner.py
devx/services/loadtest/: __init__.py  cli.py  engine.py
devx/services/perf/: __init__.py  cli.py  profiler.py
devx/services/sbom/: __init__.py  builder.py  cli.py
devx/services/secrets/: __init__.py  cli.py  rules.py
devx/services/securityscan/: __init__.py  analyzer.py  cli.py
scripts/: logo_ascii.txt  post_run_help.txt
tests/: conftest.py  test_coverage.py  test_depgraph.py  test_docgen.py  test_dockercheck.py  test_health.py  test_linkscan.py  test_lint.py  test_loadtest.py  test_perf.py  test_sbom.py  test_secrets.py  test_securityscan.py
